<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="314dp"
        android:layout_height="81dp"
        android:ems="10"
        android:hint="@string/inds_t_email"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <EditText
        android:id="@+id/editTextPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436"
        android:layout_width="314dp"
        android:layout_height="81dp"
        android:ems="10"
        android:hint="@string/inds_t_password"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="298dp" />

    <Button
        android:id="@+id/createUserButton"
        android:layout_width="323dp"
        android:layout_height="72dp"

        android:background="@color/blue"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/opret_bruger"

        android:textColor="#D1FAD1"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

</androidx.constraintlayout.widget.ConstraintLayout>